# pico-template

./: CMakeLists.txt  README.md
src/: main.cpp
util/: build.sh  format.sh  lint.sh
